# chatgpt-to-sqlite

./: .gitignore  .python-version  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test.yml
chatgpt_to_sqlite/: cli.py  utils.py
tests/: conftest.py  test_chatgpt_to_sqlite.py  test_post_import_sanity_on_db.py
