[project]
name = "chatgpt-to-sqlite"
version = "1.0.0"
description = "Import ChatGPT conversations into a SQLite database"
readme = "README.md"
authors = [{name = "Scott Carvalho"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "sqlite-utils",
    "funcy",
]

[project.urls]
Homepage = "https://github.com/Scarvy/chatgpt-to-sqlite"
Changelog = "https://github.com/Scarvy/chatgpt-to-sqlite/releases"
Issues = "https://github.com/Scarvy/chatgpt-to-sqlite/issues"
CI = "https://github.com/Scarvy/chatgpt-to-sqlite/actions"

[project.scripts]
chatgpt-to-sqlite = "chatgpt_to_sqlite.cli:cli"

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
